fixed cds bootstrapper defaults fixed cds addAdmin command

--- a/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
@@ -1,4 +1,4 @@
-org.cagrid.commandline.prompt=false
+org.cagrid.commandline.prompt=true
 cagrid.default.truststore.password=changeit
 cagrid.cds.service.name=cds
 cagrid.cds.service.db.host=localhost
@@ -9,14 +9,13 @@ cagrid.cds.service.db.password=
 cagrid.cds.wsrf.truststore.password=changeit
 cagrid.cds.wsrf.host=localhost
 
-# uncomment these and set to avoid being prompted
-#cagrid.default.truststore.location=
-#cagrid.cds.certificate.location=
-#cagrid.cds.key.location=
-#cagrid.cds.legacy-certificate.location=
-#cagrid.cds.legacy-key.location=
-#cagrid.cds.wsrf.registration.index.url=http://<host:port>/wsrf/services/DefaultIndexService
-#cagrid.cds.service.client.gridgrouper.url=https://<host:port>/gridgrouper
+cagrid.default.truststore.location=
+cagrid.cds.certificate.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cacert.pem
+cagrid.cds.key.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cakey.pem
+cagrid.cds.legacy-certificate.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cacert.pem
+cagrid.cds.legacy-key.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cakey.pem
+cagrid.cds.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
+cagrid.cds.service.client.gridgrouper.url=https://localhost:8080/gridgrouper
 
 cagrid.cds.wsrf.port=4443
 cagrid.cds.wsrf.keystore.alias=host
