--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -1,280 +1,253 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.cagrid</groupId>
-		<artifactId>cagrid-cds</artifactId>
-		<version>2.0.4-SNAPSHOT</version>
-	</parent>
-	<artifactId>cagrid-cds-service</artifactId>
-	<packaging>bundle</packaging>
-	<name>caGrid CDS Service</name>
-	<properties>
-		<db.name>CDS_TEST</db.name>
-	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<forkMode>always</forkMode>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>sql-maven-plugin</artifactId>
-				<version>1.5</version>
-				<configuration>
-					<driver>com.mysql.jdbc.Driver</driver>
-					<url>jdbc:mysql://localhost:3306</url>
-					<username>root</username>
-					<password />
-					<skip>${skipTests}</skip>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.mysql.jdbc</groupId>
-						<artifactId>com.springsource.com.mysql.jdbc</artifactId>
-						<version>5.1.6</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>drop-db-before-test</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<sqlCommand>drop database if exists ${db.name}</sqlCommand>
-						</configuration>
-					</execution>
-					<execution>
-						<id>create-db</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<sqlCommand>create database ${db.name}</sqlCommand>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package />
-						<Private-Package> org.cagrid.cds.service.impl,
-							org.cagrid.cds.service.impl.delegatedcredential,
-							org.cagrid.cds.service.impl.manager,
-							org.cagrid.cds.service.impl.policy,
-							org.cagrid.cds.service.impl.util
-						</Private-Package>
-						<Import-Package>
-							!org.apache.commons.cli,
-							org.apache.cxf.jaxws.spi, *
-						</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.cagrid</groupId>
+        <artifactId>cagrid-cds</artifactId>
+        <version>2.0.4-SNAPSHOT</version>
+    </parent>
+    <artifactId>cagrid-cds-service</artifactId>
+    <packaging>bundle</packaging>
+    <name>caGrid CDS Service</name>
+    <properties>
+        <db.name>CDS_TEST</db.name>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkMode>always</forkMode>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sql-maven-plugin</artifactId>
+                <version>1.5</version>
+                <configuration>
+                    <driver>com.mysql.jdbc.Driver</driver>
+                    <url>jdbc:mysql://localhost:3306</url>
+                    <username>root</username>
+                    <password/>
+                    <skip>${skipTests}</skip>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mysql.jdbc</groupId>
+                        <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+                        <version>5.1.6</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>drop-db-before-test</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <sqlCommand>drop database if exists ${db.name}</sqlCommand>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-db</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <sqlCommand>create database ${db.name}</sqlCommand>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package/>
+                        <Private-Package> org.cagrid.cds.service.impl,
+                            org.cagrid.cds.service.impl.delegatedcredential,
+                            org.cagrid.cds.service.impl.manager,
+                            org.cagrid.cds.service.impl.policy,
+                            org.cagrid.cds.service.impl.util
+                        </Private-Package>
+                        <Import-Package>
+                            !org.apache.commons.cli,
+                            org.apache.cxf.jaxws.spi, *
+                        </Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-artifacts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>attach-artifact</goal>
-						</goals>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>src/main/resources/CredentialDelegationService-security-metadata.xml</file>
-									<type>xml</type>
-									<classifier>CredentialDelegationService-security-metadata</classifier>
-								</artifact>
-								<artifact>
-									<file>src/main/resources/DelegatedCredential-security-metadata.xml</file>
-									<type>xml</type>
-									<classifier>DelegatedCredential-security-metadata</classifier>
-								</artifact>
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>wsrf-jglobus</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-cds-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gaards-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gridgrouper-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gridgrouper-soap-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-metadata-model</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-opensaml-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>ws-model</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>wsrf-faults-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>wsrf-properties-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk14</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.santuario</groupId>
-			<artifactId>xmlsec</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.4.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-		</dependency>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>src/main/resources/CredentialDelegationService-security-metadata.xml</file>
+                                    <type>xml</type>
+                                    <classifier>CredentialDelegationService-security-metadata</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>src/main/resources/DelegatedCredential-security-metadata.xml</file>
+                                    <type>xml</type>
+                                    <classifier>DelegatedCredential-security-metadata</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>wsrf-jglobus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-cds-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gaards-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gridgrouper-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gridgrouper-soap-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-metadata-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-opensaml-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>ws-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>wsrf-faults-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>wsrf-properties-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk14</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>com.mysql.jdbc</groupId>
-			<artifactId>com.springsource.com.mysql.jdbc</artifactId>
-			<version>5.1.6</version>
-			<!-- need compile scope because AddAdmin tool needs it -->
-			<scope>compile</scope>
-		</dependency>
+        <dependency>
+            <groupId>com.mysql.jdbc</groupId>
+            <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+            <version>5.1.6</version>
+            <!-- need compile scope because AddAdmin tool needs it -->
+            <scope>compile</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<profiles>
-		<profile>
-			<id>AddAdmin</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<defaultGoal>validate</defaultGoal>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.7</version>
-						<executions>
-							<execution>
-								<id>enter-grid-identity</id>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<phase>validate</phase>
-								<configuration>
-									<target>
-										<input message="Please enter the grid identity:" addproperty="gridId.input" />
-									</target>
-									<exportAntProperties>true</exportAntProperties>
-								</configuration>
-							</execution>
-						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.ant</groupId>
-								<artifactId>ant</artifactId>
-								<version>1.8.4</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.1.1</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>java</goal>
-								</goals>
-								<phase>validate</phase>
-								<configuration>
-									<mainClass>org.cagrid.cds.service.impl.util.AddAdmin</mainClass>
-									<arguments>
-										<argument>-conf</argument>
-										<argument>src/main/resources/META-INF/spring/cds-beans-configuration.xml</argument>
-										<argument>-properties</argument>
-										<argument>src/main/resources/tools/cds.properties</argument>
-										<argument>-admin</argument>
-										<argument>${gridId.input}</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <profiles>
+        <profile>
+            <id>addAdmin</id>
+            <activation>
+                <property>
+                    <name>addAdmin</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <mainClass>org.cagrid.cds.service.impl.util.AddAdmin</mainClass>
+                            <arguments>
+                                <argument>--conf</argument>
+                                <argument>src/main/resources/META-INF/spring/cds-beans-configuration.xml</argument>
+                                <argument>--properties</argument>
+                                <argument>src/main/resources/tools/cds.properties</argument>
+                                <argument>--admin</argument>
+                                <argument>${admin}</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
