--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-cds</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>2.0.4</version>
     </parent>
     <artifactId>cagrid-cds-service</artifactId>
     <packaging>bundle</packaging>
@@ -28,7 +28,7 @@
                     <driver>com.mysql.jdbc.Driver</driver>
                     <url>jdbc:mysql://localhost:3306</url>
                     <username>root</username>
-                    <password/>
+                    <password />
                     <skip>${skipTests}</skip>
                 </configuration>
                 <dependencies>
@@ -68,7 +68,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Export-Package/>
+                        <Export-Package />
                         <Private-Package> org.cagrid.cds.service.impl,
                             org.cagrid.cds.service.impl.delegatedcredential,
                             org.cagrid.cds.service.impl.manager,
