--- a/cagrid-features/pom.xml
+++ b/cagrid-features/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.4-SNAPSHOT</version>
+		<version>2.0.4</version>
 	</parent>
 	<artifactId>cagrid-features</artifactId>
 	<name>caGrid OSGi Common Features</name>
