--- a/cagrid-gme/cagrid-gme-wsrf/pom.xml
+++ b/cagrid-gme/cagrid-gme-wsrf/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gme</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>2.0.4</version>
     </parent>
     <artifactId>cagrid-gme-wsrf</artifactId>
     <packaging>bundle</packaging>
@@ -18,7 +18,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Export-Package/>
+                        <Export-Package />
                         <Private-Package>org.cagrid.gme.service.wsrf</Private-Package>
                         <Import-Package>
                             schema.org.cagrid.gme,
