--- a/cagrid-cds/cagrid-cds-service-tools/pom.xml
+++ b/cagrid-cds/cagrid-cds-service-tools/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-cds</artifactId>
-		<version>2.0.4</version>
+		<version>2.0.5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>cagrid-cds-service-tools</artifactId>
