Added support for CA's with and without CRLS.

--- a/cagrid-trust/cagrid-trust-service/pom.xml
+++ b/cagrid-trust/cagrid-trust-service/pom.xml
@@ -61,6 +61,19 @@
 			<artifactId>com.springsource.slf4j.log4j</artifactId>
 		</dependency>
 
+        <!-- Test Scope -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 
 </project>
