--- a/cagrid-dorian/cagrid-dorian-wsrf/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-wsrf/pom.xml
@@ -1,94 +1,100 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.cagrid</groupId>
-		<artifactId>cagrid-dorian</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
-	</parent>
-	<artifactId>cagrid-dorian-wsrf</artifactId>
-	<packaging>bundle</packaging>
-	<name>caGrid Dorian WSRF SOAP Endpoint</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.cagrid</groupId>
+        <artifactId>cagrid-dorian</artifactId>
+        <version>2.1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>cagrid-dorian-wsrf</artifactId>
+    <packaging>bundle</packaging>
+    <name>caGrid Dorian WSRF SOAP Endpoint</name>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package />
-						<Private-Package>org.cagrid.dorian.service.wsrf</Private-Package>
-						<Import-Package>
-							schema.org.cagrid.dorian,
-							org.cagrid.security.ssl.proxy.trust,
-							META-INF.cxf,
-							META-INF.cxf.osgi,
-							org.apache.cxf.bus.spring,
-							org.apache.cxf.jaxws.spi,
-							*
-						</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package/>
+                        <Private-Package>org.cagrid.dorian.service.wsrf</Private-Package>
+                        <Import-Package>
+                            schema.org.cagrid.dorian,
+                            org.cagrid.security.ssl.proxy.trust,
+                            org.cagrid.trust.service,
+                            META-INF.cxf,
+                            META-INF.cxf.osgi,
+                            org.apache.cxf.bus.spring,
+                            org.apache.cxf.jaxws.spi,
+                            *
+                        </Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-artifacts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>attach-artifact</goal>
-						</goals>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>src/main/resources/serviceMetadata.xml</file>
-									<type>xml</type>
-									<classifier>serviceMetadata</classifier>
-								</artifact>
-								<artifact>
-									<file>src/main/resources/serviceSecurityMetadata.xml</file>
-									<type>xml</type>
-									<classifier>serviceSecurityMetadata</classifier>
-								</artifact>
-								<artifact>
-									<file>src/main/resources/registration.xml</file>
-									<type>xml</type>
-									<classifier>registration</classifier>
-								</artifact>
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>src/main/resources/serviceMetadata.xml</file>
+                                    <type>xml</type>
+                                    <classifier>serviceMetadata</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>src/main/resources/serviceSecurityMetadata.xml</file>
+                                    <type>xml</type>
+                                    <classifier>serviceSecurityMetadata</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>src/main/resources/registration.xml</file>
+                                    <type>xml</type>
+                                    <classifier>registration</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-dorian-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-service-registration-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-proxy-trust</artifactId>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-dorian-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-service-registration-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-proxy-trust</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-trust-api</artifactId>
+        </dependency>
 
 
-	</dependencies>
-
+    </dependencies>
 
 
 </project>
