--- a/cagrid-service-registration/cagrid-service-registration-systest/pom.xml
+++ b/cagrid-service-registration/cagrid-service-registration-systest/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-service-registration</artifactId>
-		<version>2.0.5-SNAPSHOT</version>
+		<version>2.0.5</version>
 	</parent>
 	<artifactId>cagrid-service-registration-systest</artifactId>
 	<name>caGrid Service Registration System Test</name>
