--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cagrid</groupId>
 	<artifactId>cagrid-osgi</artifactId>
-	<version>2.0.5-SNAPSHOT</version>
+	<version>2.0.5</version>
 	<packaging>pom</packaging>
 	<name>caGrid OSGi Parent</name>
 	<properties>
