--- a/cagrid-gts/pom.xml
+++ b/cagrid-gts/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.5</version>
+		<version>2.0.6-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-gts</artifactId>
 	<packaging>pom</packaging>
