--- a/cagrid-gme/cagrid-gme-wsrf/pom.xml
+++ b/cagrid-gme/cagrid-gme-wsrf/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gme</artifactId>
-        <version>2.0.6-SNAPSHOT</version>
+        <version>2.0.6</version>
     </parent>
     <artifactId>cagrid-gme-wsrf</artifactId>
     <packaging>bundle</packaging>
