--- a/cagrid-gts/cagrid-gts-service-tools/pom.xml
+++ b/cagrid-gts/cagrid-gts-service-tools/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gts</artifactId>
-		<version>2.0.6-SNAPSHOT</version>
+		<version>2.0.6</version>
 	</parent>
 	<artifactId>cagrid-gts-service-tools</artifactId>
 	<name>GTS Service Tools</name>
