--- a/cagrid-gts/cagrid-gts-service/pom.xml
+++ b/cagrid-gts/cagrid-gts-service/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gts</artifactId>
-        <version>2.0.6</version>
+        <version>2.0.7-SNAPSHOT</version>
     </parent>
     <artifactId>cagrid-gts-service</artifactId>
     <packaging>bundle</packaging>
