--- a/cagrid-trust/cagrid-trust-service/src/test/resources/trust.properties
+++ b/cagrid-trust/cagrid-trust-service/src/test/resources/trust.properties
@@ -1,3 +1,4 @@
+cagrid.trust.service.sync.description.file=
 cagrid.trust.service.history.directory=/Users/langella/Desktop/trust/history
 cagrid.trust.service.certificates.directory=/Users/langella/Desktop/trust/certificates
 cagrid.trust.service.truststore.file=/Users/langella/Documents/caGrid/environments/keys/training-truststore.jks
