--- a/cagrid-csmapi/pom.xml
+++ b/cagrid-csmapi/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.7-SNAPSHOT</version>
+		<version>2.0.7</version>
 	</parent>
 	<artifactId>cagrid-csmapi</artifactId>
 	<packaging>bundle</packaging>
