--- a/cagrid-gme/cagrid-gme-systest/pom.xml
+++ b/cagrid-gme/cagrid-gme-systest/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gme</artifactId>
-        <version>2.0.7-SNAPSHOT</version>
+        <version>2.0.7</version>
     </parent>
     <artifactId>cagrid-gme-tests</artifactId>
     <name>caGrid GME Sys Tests</name>
