--- a/cagrid-gts/cagrid-gts-soap-client/pom.xml
+++ b/cagrid-gts/cagrid-gts-soap-client/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gts</artifactId>
-		<version>2.0.7-SNAPSHOT</version>
+		<version>2.0.7</version>
 	</parent>
 	<artifactId>cagrid-gts-soap-client</artifactId>
 	<packaging>bundle</packaging>
