--- a/cagrid-dorian/cagrid-dorian-service-tools/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service-tools/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-dorian</artifactId>
-		<version>2.0.7</version>
+		<version>2.0.8-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>cagrid-dorian-service-tools</artifactId>
