--- a/cagrid-dorian/pom.xml
+++ b/cagrid-dorian/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.7</version>
+		<version>2.0.8-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-dorian</artifactId>
 	<packaging>pom</packaging>
