--- a/cagrid-gme/cagrid-gme-api/pom.xml
+++ b/cagrid-gme/cagrid-gme-api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gme</artifactId>
-		<version>2.0.7</version>
+		<version>2.0.8-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-gme-api</artifactId>
 	<packaging>bundle</packaging>
