--- a/cagrid-gts/cagrid-gts-tests/pom.xml
+++ b/cagrid-gts/cagrid-gts-tests/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gts</artifactId>
-        <version>2.0.7</version>
+        <version>2.0.8-SNAPSHOT</version>
     </parent>
     <artifactId>cagrid-gts-tests</artifactId>
     <name>caGrid GTS Tests</name>
