--- a/cagrid-gts/cagrid-gts-service/pom.xml
+++ b/cagrid-gts/cagrid-gts-service/pom.xml
@@ -65,6 +65,7 @@
                         <Export-Package>org.cagrid.gts.tools.service</Export-Package>
                         <DynamicImport-Package>com.mysql.jdbc</DynamicImport-Package>
                         <Import-Package>
+                            org.quartz.simpl,
                             EDU.oswego.cs.dl.util.concurrent;resolution:=optional,
                             org.projectmobius.common,
                             org.projectmobius*;resolution:=optional,
