--- a/cagrid-dorian/cagrid-dorian-service/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service/pom.xml
@@ -85,6 +85,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-dorian-api</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-trust-api</artifactId>
+        </dependency>
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
