fixed all the etc path locations

--- a/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.cds.service.cfg
+++ b/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.cds.service.cfg
@@ -1,11 +1,11 @@
 cagrid.cds.service.name=${cds.db.name}
-cagrid.cds.service.client.keystorefile=${karaf.base}/etc/cds/keystore.jks
+cagrid.cds.service.client.keystorefile=${karaf.base}/etc/cagrid-cds/keystore.jks
 cagrid.cds.service.client.keystorepassword=changeit
 cagrid.cds.service.client.keyalias=host
 cagrid.cds.service.client.keypassword=changeit
-cagrid.cds.service.client.truststoreLocation=${karaf.base}/etc/cds/truststore.jks
+cagrid.cds.service.client.truststoreLocation=${karaf.base}/etc/cagrid-cds/truststore.jks
 cagrid.cds.service.client.truststorePassword=changeit
-cagrid.cds.service.metadata.url=file://${karaf.base}/etc/cds/serviceMetadata.xml
-cagrid.cds.service.security.metadata.url=file://${karaf.base}/etc/cds/CredentialDelegationService-security-metadata.xml
-cagrid.cds.service.security.delegated.metadata.url=file://${karaf.base}/etc/cds/DelegatedCredential-security-metadata.xml
+cagrid.cds.service.metadata.url=file://${karaf.base}/etc/cagrid-cds/serviceMetadata.xml
+cagrid.cds.service.security.metadata.url=file://${karaf.base}/etc/cagrid-cds/CredentialDelegationService-security-metadata.xml
+cagrid.cds.service.security.delegated.metadata.url=file://${karaf.base}/etc/cagrid-cds/DelegatedCredential-security-metadata.xml
 
