--- a/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.dorian.wsrf.cfg
+++ b/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.dorian.wsrf.cfg
@@ -1,2 +1,2 @@
-cagrid.dorian.wsrf.keystore.path=${karaf.base}/etc/dorian/keystore.jks
-cagrid.dorian.legacy-wsrf.keystore.path=${karaf.base}/etc/dorian/keystore.jks
+cagrid.dorian.wsrf.keystore.path=${karaf.base}/etc/cagrid-dorian/keystore.jks
+cagrid.dorian.legacy-wsrf.keystore.path=${karaf.base}/etc/cagrid-dorian/keystore.jks
