--- a/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.cds.wsrf.cfg
+++ b/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.cds.wsrf.cfg
@@ -1,2 +1,2 @@
-cagrid.cds.wsrf.keystore.path=${karaf.base}/etc/cds/keystore.jks
-cagrid.cds.wsrf.truststore.path=${karaf.base}/etc/cds/truststore.jks
+cagrid.cds.wsrf.keystore.path=${karaf.base}/etc/cagrid-cds/keystore.jks
+cagrid.cds.wsrf.truststore.path=${karaf.base}/etc/cagrid-cds/truststore.jks
