--- a/cagrid-dorian/cagrid-dorian-service/src/test/resources/META-INF/spring/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-service/src/test/resources/META-INF/spring/dorian.properties
@@ -81,3 +81,4 @@ cagrid.dorian.service.legacy-ca.auto.renew.lifetime.minutes=0
 cagrid.dorian.service.legacy-ca.auto.renew.lifetime.seconds=0
 cagrid.dorian.service.metadata.url=serviceMetadata.xml
 cagrid.dorian.service.security.metadata.url=serviceSecurityMetadata.xml
+cagrid.dorian.service.client.configurer=truststoreClientConfigurer
