Trust Service Development.....

--- a/cagrid-trust/cagrid-trust-service/src/test/resources/trust.properties
+++ b/cagrid-trust/cagrid-trust-service/src/test/resources/trust.properties
@@ -3,3 +3,4 @@ cagrid.trust.service.history.directory=/Users/langella/Desktop/trust/history
 cagrid.trust.service.certificates.directory=/Users/langella/Desktop/trust/certificates
 cagrid.trust.service.truststore.file=/Users/langella/Documents/caGrid/environments/keys/training-truststore.jks
 cagrid.trust.service.truststore.password=changeit
+cagrid.trust.service.client.configurer=truststoreClientConfigurer
