Add support to Trust Service support to GTS.

--- a/cagrid-gts/cagrid-gts-service/src/test/resources/META-INF/spring/gts.properties
+++ b/cagrid-gts/cagrid-gts-service/src/test/resources/META-INF/spring/gts.properties
@@ -3,3 +3,4 @@ cagrid.gts.service.metadata.url=serviceMetadata.xml
 cagrid.gts.service.security.metadata.url=serviceSecurityMetadata.xml
 cagrid.gts.service.url=localhost
 cagrid.gts.sync.authorities=false
+cagrid.gts.service.client.configurer=truststoreClientConfigurer
