Working on the Bootstrapper for the trust service.

--- a/cagrid-trust/pom.xml
+++ b/cagrid-trust/pom.xml
@@ -108,7 +108,8 @@
 	<modules>
 		<module>cagrid-trust-api</module>
 		<module>cagrid-trust-service</module>
-	</modules>
+        <module>cagrid-trust-tools</module>
+    </modules>
 	<build>
 		<pluginManagement>
 			<plugins>
