Working on the Bootstrapper for the trust service.

--- a/cagrid-trust/cagrid-trust-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-trust/cagrid-trust-tools/src/main/resources/bootstrapper.properties
@@ -7,3 +7,6 @@ cagrid.trust.service.gts.identity=/O=NCI/OU=CBIIT/OU=caGrid/OU=Training Trust Fa
 cagrid.trust.service.gts.expiration.hours=12
 cagrid.trust.service.gts.expiration.minutes=0
 cagrid.trust.service.gts.expiration.seconds=0
+#cagrid.trust.service.client.configurer=truststoreClientConfigurer
+cagrid.trust.service.client.configurer=trustServiceClientConfigurer
+cagrid.trust.service.sync.repeat.interval=1000
